--- a/index.html
+++ b/index.html
@@ -9,88 +9,106 @@
 <title>Fishin' Buddy</title>
 
 <style>
-  /* Base Reset & Layout */
+  /* ==== Base Reset & Layout ==== */
   body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: 'Segoe UI', sans-serif;
-    background: #f2eee3; /* cork-like background */
+    margin: 0; padding: 0; height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f2eee3; /* cork-like warm background */
+    color: #1b3c1a; /* deep forest green text */
+    font-size: 1rem;
     display: flex;
     flex-direction: column;
-    color: #1b3c1a; /* dark green text */
-    font-size: 1rem; /* base font size */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
-  /* Header */
+  /* ==== Header ==== */
   header {
-    background: #1b3c1a; /* forest green */
+    background: #1b3c1a;
     color: #f7f2e3;
-    padding: 1rem 1.5rem;
-    font-weight: bold;
+    padding: 1.1rem 1.75rem;
+    font-weight: 700;
+    font-size: 1.45rem;
     text-align: center;
-    font-size: 1.4rem;
     border-bottom: 4px solid #926c46; /* dark wood trim */
-  }
-
-  /* Tabs container */
-  #tabs {
-    display: flex;
-    background: #2c4b1b; /* deeper forest green */
+    letter-spacing: 0.04em;
+    user-select: none;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
     flex-shrink: 0;
   }
 
-  /* Tabs buttons */
+  /* ==== Tabs Container ==== */
+  #tabs {
+    display: flex;
+    background: #2c4b1b;
+    flex-shrink: 0;
+    box-shadow: inset 0 -3px 5px rgb(0 0 0 / 0.2);
+  }
+
+  /* ==== Tab Buttons ==== */
   #tabs button {
     flex: 1;
-    padding: 1rem 0.75rem;
+    padding: 1rem 0.8rem;
     border: none;
-    background: #d7c7a3; /* corky tab background */
+    background: #d7c7a3;
     color: #1b3c1a;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-weight: 700;
     font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.25s ease, color 0.25s ease, box-shadow 0.25s ease;
+    box-shadow: inset 0 -3px 0 #a5916d;
+    user-select: none;
   }
-
+  #tabs button:hover:not(.active) {
+    background-color: #c5b58b;
+  }
   #tabs button.active {
-    background: #1b3c1a; /* forest green */
+    background: #1b3c1a;
     color: #fefae0;
+    box-shadow: inset 0 -3px 0 #a5916d, 0 4px 8px rgb(0 0 0 / 0.15);
+    font-size: 1.05rem;
   }
 
-  /* Main content sections */
+  /* ==== Main Content Sections ==== */
   section {
     flex: 1;
-    padding: 1rem 1rem 1.5rem;
-    overflow-y: auto;
+    padding: 1rem 1.25rem 1.5rem;
     background: #f2eee3;
-    min-height: 0; /* fixes flex overflow on mobile */
+    overflow-y: auto;
+    min-height: 0; /* fix flex overflow on mobile */
+    scroll-behavior: smooth;
   }
 
-  /* Buttons */
+  /* ==== Buttons ==== */
   .button {
-    background-color: #4b2e1e; /* dark wood tone */
+    background-color: #4b2e1e;
     color: #fff;
-    padding: 0.6rem 1rem;
+    padding: 0.65rem 1.1rem;
     border: none;
-    border-radius: 8px;
-    font-weight: bold;
+    border-radius: 10px;
+    font-weight: 700;
     font-family: 'Verdana', sans-serif;
-    box-shadow: inset 0 0 2px #000, 2px 2px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 4px #00000080, 3px 3px 8px rgba(0, 0, 0, 0.35);
     cursor: pointer;
-    transition: transform 0.1s, box-shadow 0.1s;
+    transition:
+      background-color 0.25s ease,
+      transform 0.12s ease,
+      box-shadow 0.15s ease;
     font-size: 1rem;
+    user-select: none;
+    text-shadow: 0 0 3px #2a1a10;
   }
   .button:hover {
     background-color: #5a3a29;
-    transform: scale(1.02);
+    transform: scale(1.04);
+    box-shadow: inset 0 0 6px #000000cc, 4px 4px 10px rgba(0, 0, 0, 0.5);
   }
   .button:active {
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.6);
-    transform: scale(0.98);
+    box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.75);
+    transform: scale(0.96);
   }
 
-  /* Memories Feed Container */
+  /* ==== Memories Feed Container ==== */
   #photoGallery {
     max-width: 100%;
     margin: 0 auto;
@@ -99,108 +117,139 @@
     gap: 1rem;
   }
 
-  /* Catch card */
+  /* ==== Catch Card ==== */
   .catch-card {
     background: #fff8f0;
-    border-radius: 10px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+    border-radius: 12px;
+    box-shadow: 0 5px 12px rgba(0,0,0,0.12);
     overflow: hidden;
     max-width: 100%;
+    transition: box-shadow 0.3s ease;
+  }
+  .catch-card:hover {
+    box-shadow: 0 8px 18px rgba(0,0,0,0.2);
   }
 
   .catch-photo {
     width: 100%;
     display: block;
     cursor: pointer;
+    border-bottom: 1px solid #d9c7b0;
     height: auto;
+    border-radius: 12px 12px 0 0;
+    object-fit: cover;
   }
 
   .catch-info {
-    padding: 0.5rem 1rem 1rem;
+    padding: 0.75rem 1.2rem 1.25rem;
   }
 
   .catch-caption {
     font-weight: 600;
-    margin: 0.2rem 0;
-    font-size: 1.1rem;
+    margin: 0.25rem 0;
+    font-size: 1.15rem;
+    color: #2e3e2f;
+    letter-spacing: 0.02em;
   }
 
   .catch-weight {
-    font-weight: bold;
-    color: #333;
-    font-size: 1rem;
+    font-weight: 700;
+    color: #4a3b2f;
+    font-size: 1.05rem;
+    margin-bottom: 0.3rem;
   }
 
   .catch-location, .catch-date {
-    font-size: 0.9rem;
-    color: #3a3a3a;
-    margin: 0.1rem 0;
+    font-size: 0.92rem;
+    color: #595959;
+    margin: 0.12rem 0;
+    font-style: italic;
   }
 
   .catch-buttons {
     display: flex;
     justify-content: flex-end;
-    gap: 0.5rem;
-    padding: 0.5rem 1rem;
+    gap: 0.7rem;
+    padding: 0.5rem 1rem 0;
   }
 
   .catch-buttons button {
-    background: #4b2e1a; /* dark wood brown */
+    background: #4b2e1a;
     border: none;
     color: #fdf7ee;
-    padding: 0.35rem 0.8rem;
-    border-radius: 6px;
+    padding: 0.4rem 0.9rem;
+    border-radius: 8px;
     font-size: 0.9rem;
     cursor: pointer;
-    transition: background 0.2s ease;
+    transition: background-color 0.25s ease, box-shadow 0.25s ease;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 0.12);
+    user-select: none;
   }
-
   .catch-buttons button:hover {
     background: #60391f;
+    box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
   }
 
-  /* File input */
+  /* ==== File Input ==== */
   #photoInput {
     display: block;
     margin: 0 auto 1rem;
     max-width: 90vw;
     width: 100%;
+    border-radius: 10px;
+    padding: 0.5rem;
+    font-size: 1rem;
+    box-shadow: inset 0 0 6px #a5916d88;
+    border: 1px solid #b8a881;
+    cursor: pointer;
+  }
+  #photoInput:hover {
+    box-shadow: inset 0 0 10px #926c4611, 0 0 12px #926c46cc;
   }
 
-  /* Modals */
+  /* ==== Modals ==== */
   #imageModal, #instagramModal {
     display: none;
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.82);
     justify-content: center;
     align-items: center;
     z-index: 10000;
+    backdrop-filter: blur(6px);
   }
 
   #imageModal img {
     max-width: 90vw;
     max-height: 90vh;
-    border-radius: 8px;
-    box-shadow: 0 0 10px #000;
-    height: auto;
+    border-radius: 12px;
+    box-shadow: 0 0 20px #000000bb;
+    object-fit: contain;
   }
 
   .modal-close {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    font-size: 2rem;
-    color: white;
+    font-size: 2.2rem;
+    color: #fff;
     cursor: pointer;
     user-select: none;
+    transition: color 0.3s ease;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,0.7));
+  }
+  .modal-close:hover {
+    color: #d4c8b5;
   }
 
-  /* Tallies Tab */
+  /* ==== Tallies Tab ==== */
   #talliesTab h3 {
     text-align: center;
     color: #1b3c1a;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    margin-bottom: 1rem;
   }
 
   .fish-list {
@@ -209,96 +258,109 @@
 
   .fish-item {
     background: #fff3dd;
-    border-radius: 10px;
-    padding: 0.75rem 1rem;
-    margin-bottom: 12px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    transition: transform 0.15s ease;
+    border-radius: 14px;
+    padding: 1rem 1.3rem;
+    margin-bottom: 14px;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.14);
+    transition: transform 0.18s ease, box-shadow 0.18s ease;
+    cursor: default;
+    user-select: none;
   }
-
   .fish-item:hover {
-    transform: scale(1.01);
+    transform: scale(1.02);
+    box-shadow: 0 6px 14px rgba(0,0,0,0.25);
   }
 
   .fish-name {
-    font-weight: bold;
-    font-size: 1.1rem;
+    font-weight: 700;
+    font-size: 1.18rem;
     cursor: pointer;
-    padding-bottom: 4px;
-    border-bottom: 1px solid #aaa;
-    margin-bottom: 6px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #b1a07a;
+    margin-bottom: 0.5rem;
+    color: #3a4a35;
+    user-select: text;
   }
 
   .fish-counter {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 6px 0;
+    margin: 8px 0;
   }
 
   .fish-counter button {
     background: #4b2e1a;
-    color: white;
+    color: #fff;
     border: none;
-    padding: 6px 12px;
-    font-size: 1.2rem;
-    border-radius: 6px;
+    padding: 7px 14px;
+    font-size: 1.25rem;
+    border-radius: 8px;
     cursor: pointer;
-    min-width: 2.5rem;
+    min-width: 3rem;
     line-height: 1;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 0.18);
+    transition: background-color 0.3s ease;
+    user-select: none;
   }
-
   .fish-counter button:hover {
     background: #60391f;
   }
 
   .fish-counter span {
-    font-size: 1.3rem;
-    min-width: 30px;
+    font-size: 1.35rem;
+    min-width: 35px;
     text-align: center;
+    color: #2d3e25;
+    font-weight: 700;
+    user-select: text;
   }
 
   .fish-tips {
-    margin-top: 6px;
-    font-size: 0.95rem;
-    color: #333;
+    margin-top: 8px;
+    font-size: 1rem;
+    color: #4a4a4a;
     display: none;
+    font-style: italic;
+    user-select: none;
   }
 
-  /* Clear button */
+  /* ==== Clear Button ==== */
   .clear-btn {
     display: block;
-    margin: 10px auto;
-    padding: 8px 18px;
+    margin: 1rem auto 0;
+    padding: 10px 20px;
     background: #dc2626;
-    color: white;
-    font-size: 1rem;
+    color: #fff;
+    font-size: 1.1rem;
+    font-weight: 700;
     border: none;
-    border-radius: 8px;
+    border-radius: 12px;
     cursor: pointer;
     max-width: 90vw;
     width: 100%;
     box-sizing: border-box;
+    box-shadow: 0 3px 8px rgb(0 0 0 / 0.25);
+    transition: background-color 0.25s ease;
+    user-select: none;
   }
-
   .clear-btn:hover {
     background: #b91c1c;
   }
 
-  /* Tab Panels */
+  /* ==== Tab Panels ==== */
   #memoriesTab, #talliesTab, #mapTab {
     display: none;
     height: 100%;
     flex: 1;
   }
-
   #memoriesTab.active, #talliesTab.active, #mapTab.active {
     display: block;
     height: 100%;
     flex: 1;
   }
 
-  /* Forms */
+  /* ==== Forms ==== */
   .form-wrapper {
     display: flex;
     flex-direction: column;
@@ -312,7 +374,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-    max-width: 400px;
+    max-width: 420px;
     width: 100%;
     padding: 0 1rem;
     box-sizing: border-box;
@@ -320,97 +382,121 @@
 
   .form-fields label {
     width: 100%;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1rem;
+    color: #2b3a23;
   }
 
   .form-fields input[type="text"] {
     width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 1rem;
+    padding: 9px 12px;
+    border: 1.8px solid #a89f80;
+    border-radius: 8px;
+    font-size: 1.05rem;
+    color: #3a4a2f;
+    transition: border-color 0.3s ease;
+    outline-offset: 2px;
+  }
+  .form-fields input[type="text"]:focus {
+    border-color: #4b2e1e;
+    outline: none;
+    box-shadow: 0 0 6px #926c4611;
   }
 
   .form-fields button {
     align-self: center;
   }
 
-  /* Map container */
+  /* ==== Map Container ==== */
   #mapContainer {
     height: 100%;
-    min-height: 300px;
+    min-height: 320px;
     width: 100%;
-    border-radius: 8px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgb(0 0 0 / 0.15);
+    background: #eae1d5;
   }
 
-  /* === Dark Mode === */
+  /* ==== Dark Mode ==== */
   body.dark-mode, html.dark-mode {
-    background: #0d1b1e; /* deep night lake blue */
-    color: #cce3dc; /* moonlight mist */
+    background: #0d1b1e;
+    color: #cce3dc;
   }
 
   header.dark-mode {
     background: #0f2f2f;
     color: #cce3dc;
-    border-bottom: 4px solid #5e3c1f; /* warm ember tone */
+    border-bottom: 4px solid #5e3c1f;
+    box-shadow: 0 3px 8px rgb(0 0 0 / 0.35);
   }
 
   .dark-mode #tabs {
-    background: #1a2c2c; /* deeper midnight green */
+    background: #1a2c2c;
+    box-shadow: inset 0 -3px 5px rgb(0 0 0 / 0.4);
   }
 
   .dark-mode #tabs button {
-    background: #2c2f2a; /* soft moss */
+    background: #2c3532;
     color: #cce3dc;
+    box-shadow: inset 0 -3px 0 #49735d;
+  }
+
+  .dark-mode #tabs button:hover:not(.active) {
+    background-color: #3e4a48;
   }
 
   .dark-mode #tabs button.active {
     background: #0f2f2f;
     color: #fefae0;
+    box-shadow: inset 0 -3px 0 #a48e62, 0 5px 12px rgb(0 0 0 / 0.4);
+    font-size: 1.06rem;
   }
 
   .dark-mode section {
     background: #0d1b1e;
-    color: #e0f7fa;
+    color: #d1e6de;
   }
 
   .dark-mode .button {
-    background-color: #5e3c1f; /* warm firewood */
+    background-color: #5e3c1f;
     color: #fff;
-    box-shadow: inset 0 0 2px #000, 2px 2px 5px rgba(255, 140, 0, 0.4);
+    box-shadow: inset 0 0 3px #000, 3px 3px 8px rgba(255, 140, 0, 0.5);
   }
   .dark-mode .button:hover {
     background-color: #7a5233;
   }
+  .dark-mode .button:active {
+    box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.8);
+  }
 
   .dark-mode .catch-card {
-    background: #1e2b2e; /* soft twilight */
+    background: #1e2b2e;
     border: 1px solid #304f4f;
-    color: #e0f7fa;
+    color: #d0e6db;
   }
 
   .dark-mode .catch-caption,
   .dark-mode .catch-weight {
-    color: #ffddaf; /* soft amber */
+    color: #ffddaf;
   }
 
   .dark-mode .catch-location,
   .dark-mode .catch-date {
-    color: #d5e4e2;
+    color: #bcd1c9;
   }
 
   .dark-mode .catch-buttons button {
-    background: #3f2c1f; /* charred wood */
+    background: #3f2c1f;
     color: #fdf7ee;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 0.3);
   }
   .dark-mode .catch-buttons button:hover {
     background: #553c2a;
   }
 
   .dark-mode .fish-item {
-    background: #263434; /* pondside moss */
-    color: #e0f7fa;
+    background: #263434;
+    color: #d0e6db;
     border: 1px solid #3a4c4c;
   }
 
@@ -420,6 +506,7 @@
 
   .dark-mode .fish-counter button {
     background: #5e3c1f;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.4);
   }
   .dark-mode .fish-counter button:hover {
     background: #7a5233;
@@ -431,6 +518,7 @@
 
   .dark-mode .clear-btn {
     background: #8b1e1e;
+    box-shadow: 0 3px 8px rgb(0 0 0 / 0.4);
   }
   .dark-mode .clear-btn:hover {
     background: #aa2a2a;
@@ -438,96 +526,84 @@
 
   .dark-mode #imageModal,
   .dark-mode #instagramModal {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.92);
   }
 
   .dark-mode #talliesTab h3 {
-    color: #cce3dc;
+  color: #cce3dc;
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+/* Smooth scrollbar for modern browsers */
+section::-webkit-scrollbar {
+  width: 8px;
+}
+
+section::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+section::-webkit-scrollbar-thumb {
+  background-color: rgba(27, 60, 26, 0.4);
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+section:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(27, 60, 26, 0.7);
+}
+
+.dark-mode section::-webkit-scrollbar-thumb {
+  background-color: rgba(204, 227, 220, 0.4);
+}
+
+.dark-mode section:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(204, 227, 220, 0.7);
+}
+
+/* Focus outlines for accessibility */
+button:focus,
+input:focus {
+  outline: 2px solid #926c46; /* wood trim color */
+  outline-offset: 2px;
+}
+
+/* Smooth transitions for background and color changes */
+body, header, #tabs button, section, .button, .catch-card, .fish-item {
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Utility classes */
+.text-center {
+  text-align: center;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+/* Responsive enhancements */
+@media (max-width: 320px) {
+  #tabs button {
+    font-size: 0.85rem;
+    padding: 0.6rem 0.4rem;
   }
 
-  #darkModeToggle {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    z-index: 100;
-  }
-
-  .dark-mode .form-fields input[type="text"] {
-    background: #1a2c2c;
-    color: #e0f7fa;
-    border: 1px solid #4a6464;
-  }
-
-  #darkModeContainer {
-    width: 100%;
-    background: #e6dbcf; /* cork-like tone */
+  header {
+    font-size: 1rem;
     padding: 0.5rem 1rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
   }
-
-  .dark-mode #darkModeContainer {
-    background: #0f2f2f; /* dark mode tone */
-  }
-
-  /* === Responsive: Mobile and Small Screens === */
-  @media (max-width: 480px) {
-    header {
-      font-size: 1.2rem;
-      padding: 0.75rem 1rem;
-    }
-
-    #tabs button {
-      font-size: 0.9rem;
-      padding: 0.75rem 0.5rem;
-    }
-
-    .catch-caption {
-      font-size: 1rem;
-    }
-
-    .catch-weight {
-      font-size: 0.9rem;
-    }
-
-    .catch-location, .catch-date {
-      font-size: 0.85rem;
-    }
-
-    .catch-buttons button {
-      padding: 0.3rem 0.6rem;
-      font-size: 0.8rem;
-    }
-
-    .fish-name {
-      font-size: 1rem;
-    }
-
-    .fish-counter button {
-      font-size: 1rem;
-      padding: 5px 10px;
-    }
-
-    .fish-counter span {
-      font-size: 1.1rem;
-      min-width: 25px;
-    }
-
-    .clear-btn {
-      font-size: 0.95rem;
-      padding: 7px 14px;
-    }
-
-    .form-fields {
-      max-width: 100%;
-      padding: 0 0.75rem;
-    }
-
-    #mapContainer {
-      min-height: 250px;
-    }
-  }
+}
 </style>
 </head>
 <body>
