--- a/index.html
+++ b/index.html
@@ -420,12 +420,12 @@
   /* ==== Dark Mode ==== */
   body.dark-mode, html.dark-mode {
     background: #0d1b1e;
-    color: #cce3dc;
+    color: #e0f7fa;
   }
 
   header.dark-mode {
-    background: #0f2f2f;
-    color: #cce3dc;
+    background: #0d1b1e;
+    color: #e0f7fa;
     border-bottom: 4px solid #5e3c1f;
     box-shadow: 0 3px 8px rgb(0 0 0 / 0.35);
   }
