--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     padding-bottom: 5px;
     border-bottom: 2px solid #b1a07a;
     margin-bottom: 0.5rem;
-    color: #3a4a35;
+    color: #1b3c1a;
     user-select: text;
   }
 
@@ -311,7 +311,7 @@
     font-size: 1.35rem;
     min-width: 35px;
     text-align: center;
-    color: #2d3e25;
+    color: #4a4a4a;
     font-weight: 700;
     user-select: text;
   }
