--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,30 @@ function updateMapTiles(isDarkMode) {
   }
 }
 
+  function zoomToUserLocation() {
+  if (!window.myMap) return;
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(
+      (position) => {
+        const userLatLng = [position.coords.latitude, position.coords.longitude];
+        window.myMap.setView(userLatLng, 15); // Adjust zoom level as needed
+
+        // Optional: add a marker at user location
+        L.marker(userLatLng)
+          .addTo(window.myMap)
+          .bindPopup('You are here')
+          .openPopup();
+      },
+      (error) => {
+        console.error('Geolocation error:', error.message);
+      }
+    );
+  } else {
+    console.error('Geolocation not supported');
+  }
+}
+
 // ===== Main Window Load =====
 window.onload = async function () {
   try {
@@ -1159,36 +1183,35 @@ window.onload = async function () {
     setupTabs();
     await renderPhotoPosts();
 
-    // === Dark Mode ===
+    // === Dark Mode Toggle ===
     const darkToggle = document.getElementById("darkModeToggle");
     if (darkToggle) {
       const prefersDark = localStorage.getItem("darkMode") === "true";
+
       if (prefersDark) {
         document.body.classList.add("dark-mode");
         document.documentElement.classList.add("dark-mode");
       }
 
-      updateMapTiles(prefersDark); // works now because tile layers exist
+      darkToggle.textContent = prefersDark ? "☀️ Day Time" : "🌙 Night Time";
+      updateMapTiles(prefersDark);
 
       darkToggle.addEventListener("click", () => {
         const isDark = document.body.classList.toggle("dark-mode");
         document.documentElement.classList.toggle("dark-mode", isDark);
         localStorage.setItem("darkMode", isDark);
-        darkToggle.textContent = isDark ? "☀️ Day Mode" : "🌙 Night Mode";
-
+        darkToggle.textContent = isDark ? "☀️ Day Time" : "🌙 Night Time";
         updateMapTiles(isDark);
       });
-
-      darkToggle.textContent = prefersDark ? "☀️ Day Mode" : "🌙 Night Mode";
     }
 
-    // Upload handling
+    // === Upload Button ===
     const uploadBtn = document.getElementById("uploadButton");
     if (uploadBtn) {
       uploadBtn.addEventListener("click", handleUpload);
     }
 
-    // Modal handling
+    // === Modal Close Buttons ===
     const modalClose = document.getElementById("modalClose");
     if (modalClose) modalClose.addEventListener("click", closeModal);
 
@@ -1203,23 +1226,11 @@ window.onload = async function () {
       if (e.key === "Escape") closeModal();
     });
 
-    // ===== Map Initialization =====
+    // === Map Initialization ===
     if (typeof L !== "undefined") {
-      window.myMap = L.map("map").setView([0, 0], 2);
-      lightTiles.addTo(window.myMap); // default on load
-
-      window.myMap.locate({ setView: true, maxZoom: 15 });
-
-      window.myMap.on("locationfound", e => {
-        const radius = e.accuracy;
-        L.marker(e.latlng).addTo(window.myMap)
-          .bindPopup("You are within " + radius.toFixed(0) + " meters from this point").openPopup();
-        L.circle(e.latlng, radius).addTo(window.myMap);
-      });
-
-      window.myMap.on("locationerror", e => {
-        console.warn("Location error:", e.message);
-      });
+      window.myMap = L.map('map');
+      lightTiles.addTo(window.myMap); // Add default tile set
+      zoomToUserLocation(); // Call after initializing the map
     }
 
   } catch (err) {
