--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
   flex-direction: column;
   justify-content: space-between;
   color: #2b1f0e !important;
+  overflow: hidden;
 }
 
 /* Header / Title */
@@ -220,30 +221,37 @@
   letter-spacing: 0.1em;
   color: #3c2f1c !important;
   text-shadow: 1px 1px 0 #e3d6b8;
+  position: relative;
+  z-index: 2;
 }
 
 /* Card number in top-right corner */
 .export-style .card-number {
   position: absolute;
-  top: 14px;
-  right: 18px;
+  top: 8px;
+  right: 14px;
   font-weight: 700;
   font-size: 1rem;
   color: #5a432e;
   letter-spacing: 0.15em;
-  opacity: 0.6;
+  opacity: 0.75;
   font-family: monospace, monospace;
+  z-index: 3;
+  background: rgba(255, 255, 255, 0.6);
+  padding: 0.2rem 0.4rem;
+  border-radius: 6px;
 }
 
-/* Photo styling */
+/* Photo styling (preserve aspect ratio) */
 .export-style .catch-photo {
   width: 100%;
-  height: 280px;
-  object-fit: cover;
+  max-height: 280px;
+  object-fit: contain;
   border-radius: 14px;
   border: 5px solid #5a432e;
   box-shadow: inset 0 0 8px #c1b497;
   margin-bottom: 1rem;
+  background-color: #eee;
 }
 
 /* Stats container */
@@ -1012,9 +1020,11 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
       cardNumber.textContent = `#${String(photo.id).padStart(3, '0')}`;
       clone.appendChild(cardNumber);
 
+      // Generate a random rarity between 1 and 5
+      const starsCount = Math.floor(Math.random() * 5) + 1;
+      // Add rarity stars to clone
       const rarity = document.createElement('div');
       rarity.className = 'catch-rarity';
-      const starsCount = photo.rarity || 3;
       rarity.textContent = '★'.repeat(starsCount) + '☆'.repeat(5 - starsCount);
       clone.appendChild(rarity);
 
