--- a/index.html
+++ b/index.html
@@ -209,6 +209,21 @@
   overflow: hidden;
 }
 
+  .export-style::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/path/to/your-export-overlay.png'); /* 👈 update this path */
+  background-size: cover;
+  background-position: center;
+  opacity: 0.25; /* adjust brightness/transparency */
+  z-index: 1;
+  pointer-events: none;
+}
+  
 /* Header / Title */
 .export-style .catch-caption {
   font-size: 1.75rem;
@@ -271,6 +286,7 @@
 .export-style .catch-location,
 .export-style .catch-date {
   color: #4a3b2f !important;
+  z-index: 2;
 }
 
 /* Rarity stars container */
@@ -281,6 +297,7 @@
   color: #b4883e; /* golden star color */
   letter-spacing: 0.1em;
   user-select: none;
+  z-index: 2;
 }
 
 /* Hide buttons in export */
