--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/export-overlay.PNG'); /* 👈 update this path */
+  background-image: url('/Background.png'); /* 👈 update this path */
   background-size: cover;
   background-position: center;
   opacity: 1; /* adjust brightness/transparency */
