--- a/index.html
+++ b/index.html
@@ -199,50 +199,49 @@
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
   font-family: 'Palatino Linotype', 'Georgia', serif;
   position: relative;
-  padding: 1.2rem 1.4rem;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #2b1f0e !important;
   overflow: hidden;
+  background-color: transparent;
 }
 
-  .export-style::before {
+/* Background Overlay */
+.export-style::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('./Background.png'); /* 👈 update this path */
+  background-image: url('./Background.png');
   background-size: cover;
   background-position: center;
-  opacity: 1; /* adjust brightness/transparency */
-  z-index: 2;
+  opacity: 1;
+  z-index: 2; /* On top of image, below everything else */
   pointer-events: none;
 }
-  
-/* Header / Title */
+
+/* Card Title (Top Center) */
 .export-style .catch-caption {
-  font-size: 1.75rem;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.6rem;
   font-weight: 900;
   text-align: center;
-  margin-bottom: 0.6rem;
-  border-bottom: 3px solid #5a432e;
+  border-bottom: 2px solid #5a432e;
   padding-bottom: 0.3rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   color: #3c2f1c !important;
   text-shadow: 1px 1px 0 #e3d6b8;
-  position: relative;
-  z-index: 3;
+  z-index: 4;
 }
 
-/* Card number in top-right corner */
+/* Card number (Top Right) */
 .export-style .card-number {
   position: absolute;
-  top: 8px;
+  top: 10px;
   right: 14px;
   font-weight: 700;
   font-size: 1rem;
@@ -250,54 +249,62 @@
   letter-spacing: 0.15em;
   opacity: 0.75;
   font-family: monospace, monospace;
-  z-index: 4;
   background: rgba(255, 255, 255, 0.6);
   padding: 0.2rem 0.4rem;
   border-radius: 6px;
+  z-index: 4;
 }
 
-/* Photo styling (preserve aspect ratio) */
+/* Image is centered but *under* the background */
 .export-style .catch-photo {
-  width: 100%;
-  max-height: 280px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%;
+  max-height: 60%;
   object-fit: contain;
   border-radius: 14px;
-  border: 5px solid #5a432e;
+  border: 4px solid #5a432e;
   box-shadow: inset 0 0 8px #c1b497;
-  margin-bottom: 1rem;
   background-color: #eee;
-  z-index: 1;
+  z-index: 1; /* Below the background overlay */
 }
 
-/* Stats container */
+/* Info (Bottom Left, under photo) */
 .export-style .catch-info {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
   display: flex;
   flex-direction: column;
-  gap: 0.6rem;
-  font-size: 1.1rem;
+  gap: 0.3rem;
+  font-size: 1.05rem;
   font-weight: 600;
   text-shadow: 1px 1px 1px #f7f3e7;
   color: #3c2f1c !important;
-  flex-grow: 1;
+  z-index: 4;
+  text-align: left;
 }
 
-/* Individual stat items */
+/* Stat Items */
 .export-style .catch-weight,
 .export-style .catch-location,
 .export-style .catch-date {
   color: #4a3b2f !important;
-  z-index: 3;
 }
 
-/* Rarity stars container */
+/* Rarity stars (very bottom, centered) */
 .export-style .catch-rarity {
-  margin-top: 0.75rem;
-  text-align: center;
-  font-size: 1.3rem;
-  color: #b4883e; /* golden star color */
-  letter-spacing: 0.1em;
+  position: absolute;
+  bottom: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.1rem;
+  color: #b4883e;
+  letter-spacing: 0.08em;
   user-select: none;
-  z-index: 3;
+  z-index: 4;
 }
 
 /* Hide buttons in export */
