--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   background-size: cover;
   background-position: center;
   opacity: 1;
-  z-index: 2; /* On top of image, below everything else */
+  z-index: 2;
   pointer-events: none;
 }
 
@@ -233,8 +233,8 @@
   padding-bottom: 0.3rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  color: #3c2f1c !important;
-  text-shadow: 1px 1px 0 #e3d6b8;
+  color: #fdf8f2 !important;
+  text-shadow: 1px 1px 2px #000;
   z-index: 4;
 }
 
@@ -245,13 +245,13 @@
   right: 14px;
   font-weight: 700;
   font-size: 1rem;
-  color: #5a432e;
+  color: #fdf8f2;
   letter-spacing: 0.15em;
-  opacity: 0.75;
   font-family: monospace, monospace;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(0, 0, 0, 0.6);
   padding: 0.2rem 0.4rem;
   border-radius: 6px;
+  text-shadow: 1px 1px 2px #000;
   z-index: 4;
 }
 
@@ -268,10 +268,10 @@
   border: 4px solid #5a432e;
   box-shadow: inset 0 0 8px #c1b497;
   background-color: #eee;
-  z-index: 1; /* Below the background overlay */
+  z-index: 1;
 }
 
-/* Info (Bottom Left, under photo) */
+/* Info (Bottom Left) */
 .export-style .catch-info {
   position: absolute;
   bottom: 50px;
@@ -281,8 +281,8 @@
   gap: 0.3rem;
   font-size: 1.05rem;
   font-weight: 600;
-  text-shadow: 1px 1px 1px #f7f3e7;
-  color: #3c2f1c !important;
+  color: #fdf8f2 !important;
+  text-shadow: 1px 1px 2px #000;
   z-index: 4;
   text-align: left;
 }
@@ -291,18 +291,20 @@
 .export-style .catch-weight,
 .export-style .catch-location,
 .export-style .catch-date {
-  color: #4a3b2f !important;
+  color: #fdf8f2 !important;
+  text-shadow: 1px 1px 2px #000;
 }
 
-/* Rarity stars (very bottom, centered) */
+/* Rarity stars (Bottom Center) */
 .export-style .catch-rarity {
   position: absolute;
   bottom: 16px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 1.1rem;
-  color: #b4883e;
+  font-size: 1.05rem;
+  color: #fdf8f2;
   letter-spacing: 0.08em;
+  text-shadow: 1px 1px 2px #000;
   user-select: none;
   z-index: 4;
 }
