--- a/index.html
+++ b/index.html
@@ -264,16 +264,18 @@
 /* Image is centered but *under* the background */
 .export-style .catch-photo {
   position: absolute;
-  top: 45%;
+  top: 50%; /* changed from 45% */
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 90%;
   max-height: 60%;
+  width: auto;
+  height: auto;
   object-fit: contain;
   border-radius: 14px;
   border: 4px solid #5a432e;
   box-shadow: inset 0 0 8px #c1b497;
-  background-color: #eee;
+  background-color: #000; /* set to black to avoid export white boxes */
   z-index: 1;
 }
 
