--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
-  background-color: transparent;
+  background-color: #000;
 }
 
 /* Background Overlay */
