--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
   }
 
   /* === Export-style collectible trading card === */
+/* === Export-style collectible trading card === */
 .export-style {
   width: 420px;
   height: 620px;
@@ -201,23 +202,13 @@
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
-  background-color: #000;
-}
 
-/* Background Overlay */
-.export-style::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  /* ✅ Background fix */
+  background-color: #000; /* Black base behind PNG */
   background-image: url('./Background.png');
   background-size: cover;
   background-position: center;
-  opacity: 1;
-  z-index: 2;
-  pointer-events: none;
+  background-repeat: no-repeat;
 }
 
 /* Card Title (Top Center) */
