--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@
     box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
   }
 
-  /* === Export-style collectible trading card === */
 /* === Export-style collectible trading card === */
 .export-style {
   width: 420px;
@@ -202,13 +201,23 @@
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
+  background-color: #000;
+}
 
-  /* ✅ Background fix */
-  background-color: #000; /* Black base behind PNG */
+/* Background Overlay */
+.export-style::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('./Background.png');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  opacity: 1;
+  z-index: 2;
+  pointer-events: none;
 }
 
 /* Card Title (Top Center) */
@@ -1030,7 +1039,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
       clone.style.position = 'fixed';
       clone.style.top = '-10000px';
       clone.style.left = '0';
-      clone.style.background = '#fff';
+      clone.style.background = '#000';
 
       // Remove buttons from clone
       const buttons = clone.querySelector(".catch-buttons");
