--- a/index.html
+++ b/index.html
@@ -278,22 +278,18 @@
   z-index: 9;
 }
 
-/* Image is centered but *under* the background */
 .export-style .catch-photo {
   position: absolute;
-  top: 50%; /* changed from 45% */
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 60%;
-  width: auto;
-  height: auto;
-  object-fit: contain;
-  border-radius: 14px;
-  border: 4px solid #5a432e;
-  box-shadow: inset 0 0 8px #c1b497;
-  background-color: #000; /* set to black to avoid export white boxes */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: #000;
   z-index: 1;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
 }
 
 /* Info (Bottom Left) */
