--- a/index.html
+++ b/index.html
@@ -280,16 +280,16 @@
 
 .export-style .catch-photo {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background-color: #000;
+  top: calc(350 / 1550 * 100%);   /* ≈ 22.58% */
+  left: calc(200 / 1000 * 100%);  /* = 20% */
+  width: calc(700 / 1000 * 100%); /* = 70% */
+  height: calc(1000 / 1550 * 100%); /* ≈ 64.52% */
+  object-fit: cover;
+  background-color: transparent;
   z-index: 1;
-  border: none;
-  border-radius: 0;
-  box-shadow: none;
+  border-radius: 14px;
+  border: 4px solid #5a432e;
+  box-shadow: inset 0 0 8px #c1b497;
 }
 
 /* Info (Bottom Left) */
