--- a/index.html
+++ b/index.html
@@ -280,13 +280,14 @@
 
 .export-style .catch-photo {
   position: absolute;
-  top: calc(350 / 1550 * 100%);   /* ≈ 22.58% */
-  left: calc(200 / 1000 * 100%);  /* = 20% */
-  width: calc(700 / 1000 * 100%); /* = 70% */
-  height: calc(1000 / 1550 * 100%); /* ≈ 64.52% */
-  object-fit: cover;
-  background-color: transparent;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 70%;
+  max-height: 64%;
+  object-fit: contain;
   z-index: 1;
+  background-color: transparent;
   border-radius: 14px;
   border: 4px solid #5a432e;
   box-shadow: inset 0 0 8px #c1b497;
