--- a/index.html
+++ b/index.html
@@ -293,20 +293,26 @@
   box-shadow: inset 0 0 8px #c1b497;
 }
 
-/* Info (Bottom Left) */
 .export-style .catch-info {
   position: absolute;
   bottom: 40px;
-  left: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.4rem;
   font-size: 1.05rem;
   font-weight: 600;
   color: #fdf8f2 !important;
   text-shadow: 1px 1px 2px #000;
   z-index: 4;
   text-align: left;
+
+  background-color: rgba(0, 0, 0, 0.2); /* shaded box background */
+  padding: 0.6rem 1rem;
+  border-radius: 8px;
+  border-top: 2px solid #5a432e;
+  border-bottom: 2px solid #5a432e;
 }
 
 /* Stat Items */
