--- a/index.html
+++ b/index.html
@@ -283,14 +283,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 70%;
-  max-height: 64%;
+  width: 90%;
+  height: auto;
+  max-height: 90%;
   object-fit: contain;
-  z-index: 1;
   background-color: transparent;
-  border-radius: 14px;
-  border: 4px solid #5a432e;
-  box-shadow: inset 0 0 8px #c1b497;
+  z-index: 1;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
 }
 
 .export-style .catch-info {
