--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   max-height: 1000px;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   background-color: transparent;
   z-index: 1;
   border: none;
