--- a/index.html
+++ b/index.html
@@ -282,11 +282,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 700px;
+  height: 1000px;
   transform: translate(-50%, -50%);
-  max-width: 700px;
-  max-height: 1000px;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   background-color: transparent;
   z-index: 1;
