--- a/index.html
+++ b/index.html
@@ -282,14 +282,15 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 700px;
-  height: 1000px;
+  width: 90%;
+  height: 60%;
   transform: translate(-50%, -50%);
   overflow: hidden;
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
 }
 
 .export-style .catch-photo {
