--- a/index.html
+++ b/index.html
@@ -280,25 +280,27 @@
 
 .export-style .image-window {
   position: absolute;
-  top: 130px; /* Adjust based on where your window starts */
-  left: 40px; /* Adjust based on horizontal position */
-  width: 340px; /* Card is 420px wide, so with 40px margin each side */
-  height: 280px; /* Adjust based on the window's vertical size */
+  top: 130px;         /* adjust vertical placement */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 380px;       /* a bit bigger than visible window */
+  height: 320px;      /* a bit bigger vertically */
   overflow: hidden;
-  z-index: 1; /* Below the frame but above the background */
+  z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 12px; /* optional, only if the frame window is rounded */
+  border-radius: 12px;
+  background: transparent;
 }
 
 .export-style .catch-photo {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Or use `contain` if you want full image visible */
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;  /* maintain aspect ratio, fit inside */
   object-position: center;
-  background: transparent;
   display: block;
+  background: transparent;
 }
 
 .export-style .catch-info {
