--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 .export-style .image-window {
   position: absolute;
   top: 130px;         /* adjust vertical placement */
-  left: 50%;
+  left: 40px;
   transform: translateX(-50%);
   width: 380px;       /* a bit bigger than visible window */
   height: 320px;      /* a bit bigger vertically */
