--- a/index.html
+++ b/index.html
@@ -280,11 +280,10 @@
 
 .export-style .image-window {
   position: absolute;
-  top: 130px;         /* adjust vertical placement */
-  left: 50px;
-  transform: translateX(-50%);
-  width: 380px;       /* a bit bigger than visible window */
-  height: 320px;      /* a bit bigger vertically */
+  top: 130px;         /* adjust to vertically align with the window */
+  left: 60px;         /* adjust to horizontally align with the window */
+  width: 380px;       /* slightly larger than the visible frame */
+  height: 320px;      /* slightly larger than the visible frame */
   overflow: hidden;
   z-index: 3;
   display: flex;
