--- a/index.html
+++ b/index.html
@@ -280,16 +280,15 @@
 
 .export-style .image-window {
   position: absolute;
-  top: 130px;         /* adjust to vertically align with the window */
-  left: 40px;         /* adjust to horizontally align with the window */
-  width: 380px;       /* slightly larger than the visible frame */
-  height: 320px;      /* slightly larger than the visible frame */
+  top: 115px;
+  left: 32px;
+  width: 356px;
+  height: 395px;
   overflow: hidden;
   z-index: 3;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 12px;
   background: transparent;
 }
 
