--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
     </label>
 
     <label for="locationInput">Ability:
-      <input type="text" id="locationInput" placeholder="Enter location here" />
+      <input type="text" id="locationInput" placeholder="Enter Ability here" />
     </label>
 
     <label for="weightInput">Weight (lbs):
