--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
 
   <div class="form-fields">
     <label for="captionInput">Name:
-      <input type="text" id="captionInput" placeholder="Enter caption here" />
+      <input type="text" id="captionInput" placeholder="Enter Name here" />
     </label>
 
     <label for="locationInput">Ability:
