--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
     if (photo.location) {
       const location = document.createElement("p");
       location.className = "catch-location";
-      location.textContent = "Location: " + photo.location;
+      location.textContent = "Ability: " + photo.location;
       info.appendChild(location);
     }
 
@@ -1091,6 +1091,17 @@ imageWrapper.appendChild(originalImg);
       // Remove weight element from export
       const weight = clone.querySelector('.catch-weight');
       if (weight) weight.remove();
+
+      const caption = clone.querySelector('.catch-caption');
+const info = clone.querySelector('.catch-info');
+
+// Remove weight element from export
+const weight = clone.querySelector('.catch-weight');
+if (weight) weight.remove();
+
+// Remove date element from export
+const date = clone.querySelector('.catch-date');
+if (date) date.remove();
 
       if (caption && info) {
         info.removeChild(caption);        // remove caption from info container
