--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 }
 
 .export-style.rarity-5::before {
-  background-image: url('./Background-5');
+  background-image: url('./Background-5.png');
 }
 
     .export-style .catch-caption {
