--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 .export-style .catch-photo {
   max-width: 100%;
   max-height: 100%;
-  object-fit: cover;  /* maintain aspect ratio, fit inside */
+  object-fit: contain;  /* maintain aspect ratio, fit inside */
   object-position: center;
   display: block;
   background: transparent;
